syntax = "proto3";

option csharp_namespace = "TimeCat.Proto.Services";

import "core/common.proto";
import "google/protobuf/timestamp.proto";

service RpcCommonService {
	rpc Initialize (InitializeRequest) returns (InitializeResponse);
	rpc HealthCheck (HealthCheckRequest) returns (HealthCheckResponse);
}

message InitializeRequest {
	string appVersion = 1;
}

message InitializeResponse {
	bool isSuccess = 1;
	OSInformation osInformation = 2;
}

message HealthCheckRequest {
	google.protobuf.Timestamp currentTime = 1;
	google.protobuf.Timestamp responseTime = 2;
}

message HealthCheckResponse {
	google.protobuf.Timestamp currentTime = 1;
	google.protobuf.Timestamp requestTime = 2;
}

message OSInformation {
	RpcOSPlatform platform = 1;
	RpcOSArchitecture architecture = 2;
	string description = 3;
}